# openclip_benchmark

./: .gitignore  README.md  analyze_grouping.py  benchmark_tracker.py  classification_metrics.csv  dataset_mapping.json  generate_benchmark_command.py  pyproject.toml  results.csv  retrieval_metrics.csv  sky_config.yaml  skypilot_issue.md  test_sky_envs.py
clip_eval_runner/: cli.py  config.py  datasets.py  tracking.py
configs/: cluster_8xh100.yaml  experiment_no_spot.yaml  experiment_spot.yaml  grouped_job_template.yaml  hello-sky.yaml  interactive.yaml  managed_job_template.yaml
docs/: shared_cache_execution.md
openclip_benchmark/: __init__.py  cloud_gpus.py  models.py  tracking.py  utils.py
scripts/: grouped_job_launcher.py  job_launcher.py  run_benchmark_group.py  submit_to_cluster.py
